--- a/src/main/webapp/administrator/sale/report.xhtml
+++ b/src/main/webapp/administrator/sale/report.xhtml
@@ -10,14 +10,16 @@
                 <div class="card">
                     <h1>#{i18n['Reports']}</h1>
                     <p>Use this page to start from scratch and place your custom content.</p>
+
                     <h:form>
-                        <h:panelGrid columns="4">
-                            <p:calendar value="#{reportController.reportFormModel.start}" label="#{i18n['Starting Time']}" placeholder="#{i18n['Starting Time']}" locale="#{localeBean.locale}" required="true"/>
-                            <p:calendar value="#{reportController.reportFormModel.end}" label="#{i18n['Ending Time']}" placeholder="#{i18n['Ending Time']}" locale="#{localeBean.locale}" required="true"/>
+                        <h:panelGrid columns="3">
+                            <p:calendar value="#{reportController.reportFormModel.start}" label="#{i18n['Starting Time']}" placeholder="#{i18n['Starting Time']}" locale="#{localeBean.locale}" pattern="yyyy-MM-dd HH:mm" required="true" />
+                            <p:calendar value="#{reportController.reportFormModel.end}" label="#{i18n['Ending Time']}" placeholder="#{i18n['Ending Time']}" locale="#{localeBean.locale}" pattern="yyyy-MM-dd HH:mm" required="true" />
                             <p:commandButton value="#{i18n['Refresh']}" actionListener="#{reportController.doDrawChart}" update="@form, :growl"/>
                         </h:panelGrid>
-                        <p:chart type="pie" model="#{reportController.pieModel1}" responsive="true" />
-                        <p:chart type="pie" model="#{reportController.pieModel2}" responsive="true" />
+
+                        <p:chart type="pie" model="#{reportController.pieModel1}" responsive="true" rendered="#{not empty reportController.pieModel1.data}" />
+                        <p:chart type="pie" model="#{reportController.pieModel2}" responsive="true" rendered="#{not empty reportController.pieModel2.data}" />
                     </h:form>
                 </div>
             </div>
