--- a/src/main/webapp/administrator/user/index.xhtml
+++ b/src/main/webapp/administrator/user/index.xhtml
@@ -9,7 +9,7 @@
             <div class="ui-g-12">
                 <div class="card">
                     <h1>#{i18n['User']}</h1>
-                    <p>Use this page to start from scratch and place your custom content.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <h:form id="form">
                         <p:dataTable id="dataTable" value="#{userController.lazyModel}" var="user" emptyMessage="#{i18n['No records found']}"
                                      paginator="true" paginatorPosition="bottom" rows="10" 
