--- a/src/main/webapp/administrator/product/image.xhtml
+++ b/src/main/webapp/administrator/product/image.xhtml
@@ -16,7 +16,7 @@
             <div class="ui-g-12">
                 <div class="card">
                     <h1>#{i18n['Product']}</h1>
-                    <p>Use this page to start from scratch and place your custom content.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="ui-g">
                         <div class="ui-g-3">
                             <composite:navigationProduct product="#{productController.selectedRecord}"/>
