--- a/src/main/webapp/administrator/sale/index.xhtml
+++ b/src/main/webapp/administrator/sale/index.xhtml
@@ -10,8 +10,8 @@
         <div class="ui-g">
             <div class="ui-g-12">
                 <div class="card">
-                    <h1>#{i18n['Sales']}</h1>
-                    <p>Use this page to start from scratch and place your custom content.</p>
+                    <h1>#{i18n['Orders']}</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <h:form id="form">
                         <p:poll interval="60" update="dataTable"/>
                         <p:dataTable id="dataTable" value="#{saleController.lazyModel}" var="sale" emptyMessage="#{i18n['No records found']}"
