--- a/src/main/webapp/administrator/sale/report.xhtml
+++ b/src/main/webapp/administrator/sale/report.xhtml
@@ -9,7 +9,7 @@
             <div class="ui-g-12">
                 <div class="card">
                     <h1>#{i18n['Reports']}</h1>
-                    <p>Use this page to start from scratch and place your custom content.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
                     <h:form>
                         <h:panelGrid columns="3">
