--- a/src/main/webapp/administrator/sale/show.xhtml
+++ b/src/main/webapp/administrator/sale/show.xhtml
@@ -15,8 +15,8 @@
         <div class="ui-g">
             <div class="ui-g-12">
                 <div class="card">
-                    <h1>#{i18n['Sale']}</h1>
-                    <p>Use this page to start from scratch and place your custom content.</p>
+                    <h1>#{i18n['Order']}</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="ui-g">
                         <div class="ui-g-3">
                             <p:panel header="#{i18n['Order Ref']}" style="margin-bottom: 5px;">
