--- a/src/main/webapp/administrator/ticket/index.xhtml
+++ b/src/main/webapp/administrator/ticket/index.xhtml
@@ -9,7 +9,7 @@
             <div class="ui-g-12">
                 <div class="card">
                     <h1>#{i18n['Tickets']}</h1>
-                    <p>Use this page to start from scratch and place your custom content.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <h:form id="form">
                         <p:poll interval="60" update="dataTable"/>
                         <p:dataTable id="dataTable" value="#{ticketController.lazyModel}" var="ticket" emptyMessage="#{i18n['No records found']}"
