--- a/src/main/webapp/administrator/user/show.xhtml
+++ b/src/main/webapp/administrator/user/show.xhtml
@@ -15,7 +15,7 @@
             <div class="ui-g-12">
                 <div class="card">
                     <h1>#{i18n['User']}</h1>
-                    <p>Use this page to start from scratch and place your custom content.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="ui-g">
                         <div class="ui-g-3">
                             <composite:navigationUser user="#{userController.selectedRecord}"/>
